--- a/projects/ng-aquila/src/dropdown/multi-select/multi-select-option.component.scss
+++ b/projects/ng-aquila/src/dropdown/multi-select/multi-select-option.component.scss
@@ -3,6 +3,7 @@
 :host {
   display: flex;
   width: 100%;
+  line-height: v(multi-select-item-line-height);
   padding: v(multi-select-item-padding-vertical) v(multi-select-item-padding-horizon);
 
   &:hover {
